# expected

./: .travis.yml  CMakeLists.txt
include/atl/: bad_expected_access.h  expected.hpp  expected_t.h  macros.h  success.h  unexpected_t.h
include/atl/detail/: expected_five_bases.h  expected_operations_base.h  expected_storage_base.h  functional_extensions.h  no_init_t.h  traits.h
tests/: assignment.cpp  bases.cpp  constexpr.cpp  constructors.cpp  emplace.cpp  extensions.cpp  issues.cpp  macros.cpp  noexcept.cpp  observers.cpp  operational_extensions.cpp  relops.cpp  success.cpp  swap.cpp  test.cpp
